src/core-crm/objects/Communication_Schedule__c/Communication_Schedule__c.object-meta.xml
<CustomObject>
    <label>Communication Schedule</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Communication Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>