src/core-crm/objects/Communication_Schedule__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Course record.</description>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Communication Schedules</relationshipLabel>
    <relationshipName>Communication_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>