src/core-crm/objects/Communication_Schedule__c/fields/Days_before_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_before_Start_Date__c</fullName>
    <inlineHelpText>This field controls sending of the Final Confirmation Email before the offering start date</inlineHelpText>
    <label>Days before Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>