src/core-crm/objects/Communication_Schedule__c/fields/Email_on_completion__c.field-meta.xml
<CustomField>
    <fullName>Email_on_completion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Upon selection of the email template for use, the registered learner will receive an email one (1) calendar day prior to the start of the product.</inlineHelpText>
    <label>Send Email on completion</label>
    <type>Checkbox</type>
</CustomField>