src/core-crm/objects/Communication_Schedule__c/fields/Email_on_final_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Email_on_final_confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Upon selection of the email template for use, the learner will receive an email prior to the start of the product. Set the number of days prior that the email should be sent to the registered learner.</inlineHelpText>
    <label>Send Email on final confirmation</label>
    <type>Checkbox</type>
</CustomField>