src/core-crm/objects/Communication_Schedule__c/fields/Email_on_Registration__c.field-meta.xml
<CustomField>
    <fullName>Email_on_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The email will be automatically sent to the learner upon their registration into the product.</inlineHelpText>
    <label>Send Email on Registration</label>
    <type>Checkbox</type>
</CustomField>