src/core-crm/objects/Communication_Schedule__c/fields/EmailHow_many_days_before_session__c.field-meta.xml
<CustomField>
    <fullName>EmailHow_many_days_before_session__c</fullName>
    <label>How many days before session(Email)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>