src/core-crm/objects/Communication_Schedule__c/fields/Notification_Before_Session_Template__c.field-meta.xml
<CustomField>
    <fullName>Notification_Before_Session_Template__c</fullName>
    <description>Email template to be used for notification before session starts</description>
    <label>Notification Before Session Template</label>
    <type>TextArea</type>
</CustomField>