src/core-crm/objects/Communication_Schedule__c/fields/On_Completion_Template__c.field-meta.xml
<CustomField>
    <fullName>On_Completion_Template__c</fullName>
    <description>Email template to be used for Completion Email</description>
    <label>On Completion Template</label>
    <type>TextArea</type>
</CustomField>