src/core-crm/objects/Communication_Schedule__c/fields/On_Final_Confirmation_Template__c.field-meta.xml
<CustomField>
    <fullName>On_Final_Confirmation_Template__c</fullName>
    <description>Email template to be used for Final Confirmation Email</description>
    <label>On Final Confirmation Template</label>
    <type>TextArea</type>
</CustomField>