src/core-crm/objects/Communication_Schedule__c/fields/On_Registration_Template__c.field-meta.xml
<CustomField>
    <fullName>On_Registration_Template__c</fullName>
    <description>Email template to be used for Registration Confirmation Email</description>
    <label>On Registration Template</label>
    <type>TextArea</type>
</CustomField>