src/core-crm/objects/Communication_Schedule__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Program Plan record.</description>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Communication Schedules</relationshipLabel>
    <relationshipName>Communication_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>