src/core-crm/objects/Communication_Schedule__c/fields/Send_email_before_session__c.field-meta.xml
<CustomField>
    <fullName>Send_email_before_session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification before Session</label>
    <type>Checkbox</type>
</CustomField>