src/core-crm/objects/Communication_Schedule__c/fields/Send_SMS_before_session__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_before_session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS before session</label>
    <type>Checkbox</type>
</CustomField>