src/core-crm/objects/Communication_Schedule__c/fields/SMS_on_completion__c.field-meta.xml
<CustomField>
    <fullName>SMS_on_completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS on completion</label>
    <type>Checkbox</type>
</CustomField>