src/core-crm/objects/Communication_Schedule__c/fields/SMS_on_final_confirmation__c.field-meta.xml
<CustomField>
    <fullName>SMS_on_final_confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS on final confirmation</label>
    <type>Checkbox</type>
</CustomField>