src/core-crm/objects/Communication_Schedule__c/fields/SMSHow_many_days_before_session__c.field-meta.xml
<CustomField>
    <fullName>SMSHow_many_days_before_session__c</fullName>
    <label>How many days before session(SMS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>