src/core-crm/objects/Communication_Schedule__c/fields/SMSHow_many_days_before_start__c.field-meta.xml
<CustomField>
    <fullName>SMSHow_many_days_before_start__c</fullName>
    <label>How many days before start date(SMS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>